# Remo

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RemoSwift.podspec  SECURITY.md  SPEC.md  build-ios.sh  cbindgen.toml  rust-toolchain.toml
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-website.yml  release.yml
.tart/: project.sh  project.toml  provision.sh  verify-worktree.sh
.tart/packs/: _lib.sh  agents.sh  go.sh  ios.sh  node.sh  python.sh  rust.sh  shell.sh
crates/remo-agent/: Cargo.toml
crates/remo-agent/examples/: standalone_agent.rs
crates/remo-agent/src/: handler.rs  lib.rs  registry.rs  server.rs
crates/remo-bonjour/: Cargo.toml
crates/remo-bonjour/src/: browser.rs  error.rs  lib.rs  register.rs  sys.rs  txt.rs
crates/remo-bonjour/tests/: roundtrip.rs
crates/remo-cli/: Cargo.toml
crates/remo-cli/src/: main.rs
crates/remo-core/: Cargo.toml
crates/remo-core/src/: error.rs  lib.rs  protocol.rs  types.rs
crates/remo-daemon/: Cargo.toml
crates/remo-daemon/src/: api.rs  connection_pool.rs  daemon.rs  event_bus.rs  lib.rs  types.rs
crates/remo-desktop/: Cargo.toml
crates/remo-desktop/src/: device_manager.rs  lib.rs  mp4_muxer.rs  rpc_client.rs  stream_receiver.rs
crates/remo-desktop/src/dashboard/: dashboard.html  mod.rs
crates/remo-desktop/src/web_player/: mod.rs  player.html
crates/remo-host/: Cargo.toml
crates/remo-host/src/: main.rs  session.rs
crates/remo-host/tests/: integration.rs
crates/remo-objc/: Cargo.toml
crates/remo-objc/src/: device_info.rs  inspector.rs  lib.rs  main_thread.rs  runtime.rs  screen_capture.rs  screenshot.rs  video_encoder.rs  view_tree.rs
crates/remo-protocol/: Cargo.toml
crates/remo-protocol/src/: codec.rs  lib.rs  message.rs
crates/remo-sdk/: Cargo.toml
crates/remo-sdk/src/: ffi.rs  lib.rs  registry.rs  server.rs  streaming.rs
crates/remo-transport/: Cargo.toml
crates/remo-transport/src/: connection.rs  device.rs  lib.rs  listener.rs
crates/remo-transport/src/usbmuxd/: client.rs  protocol.rs
crates/remo-usbmuxd/: Cargo.toml
crates/remo-usbmuxd/src/: client.rs  lib.rs  types.rs
docs/: README-TODO.md  cli.md  tart-dev-vm-handoff.md  tart-dev-vm.md  tart-development-guide.md
docs/plans/: 2026-03-21-bonjour-discovery.md  2026-03-26-daemon-architecture.md
docs/specs/: 2026-03-21-fancy-example-design.md  2026-03-26-daemon-architecture-design.md  2026-03-29-android-expansion-design.md  2026-04-22-tart-start-ux-design.md
docs/superpowers/plans/: 2026-03-22-video-streaming-phase1-protocol-and-capture.md  2026-03-22-video-streaming-phase2-desktop-playback.md  2026-03-28-showcase-website.md  2026-03-31-uikit-grid-tab.md  2026-04-02-swift-macro.md  2026-04-12-tart-dev-vm.md  2026-04-14-capability-first-positioning.md  2026-04-15-tart-multi-project-toolkit.md
docs/superpowers/specs/: 2026-03-22-video-streaming-design.md  2026-03-29-cli-release-distribution-design.md  2026-03-30-swift-sendable-capability-api-design.md  2026-03-30-website-phone-fallback-image-design.md  2026-03-31-uikit-demo-tab-design.md  2026-03-31-uikit-grid-tab-redesign.md  2026-03-31-website-pnpm-migration-design.md  2026-04-02-swift-macro-design.md  2026-04-12-tart-dev-vm-design.md  2026-04-12-xcode-mcp-removal-design.md  2026-04-14-capability-first-positioning-design.md
examples/ios/: README.md
examples/ios/Config/: RemoExample.entitlements  Shared.xcconfig  Tests.xcconfig
examples/ios/RemoExample/: RemoExample.xctestplan  RemoExampleApp.swift
examples/ios/RemoExample.xcodeproj/: project.pbxproj
examples/ios/RemoExample.xcworkspace/: contents.xcworkspacedata
examples/ios/RemoExamplePackage/: Package.resolved  Package.swift
examples/ios/RemoExampleUITests/: RemoExampleUITests.swift
ios-demo/RemoDemo/: AppDelegate.swift  HomeViewController.swift
prd/: README.md
prd/sdk-network-capture/: README.md
scripts/: e2e-test.sh  install-remo.sh  package-cli-release.sh  record-demo.sh  render-homebrew-formula.sh  uninstall-remo.sh
scripts/tart/: bootstrap-dev-vm.sh  clean-worktree-dev-vm.sh  codex-dev-vm.sh  common.sh  connect-dev-vm.sh  create-dev-vm.sh  destroy-dev-vm.sh  doctor-dev-vm.sh  e2e-dev-vm.sh  open-cursor-dev-vm.sh  open-editor-dev-vm.sh  open-vscode-dev-vm.sh  prepare-remote-ssh-dev-vm.sh  provision-dev-vm.sh  ssh-dev-vm.sh  status-dev-vm.sh  use-worktree-dev-vm.sh
skills/: README.md  remo-capabilities.md  remo-design-review.md  remo-setup.md  remo.md
skills/example-ios-feature-dev/: SKILL.md
skills/remo/: SKILL.md
skills/remo-capabilities/: SKILL.md
skills/remo-capabilities/agents/: openai.yaml
skills/remo-design-review/: SKILL.md
skills/remo-design-review/agents/: openai.yaml
skills/remo-setup/: SKILL.md
skills/tart-dev-management/: SKILL.md
spec/: README.md
spec/sdk-network-capture/: README.md
swift/: CLAUDE.md  README.md  Remo.podspec
swift/RemoSwift/: Package.swift
tests/: build_ios_target_dir.sh  cli_homebrew_formula.sh  cli_install_scripts.sh  cli_release_packaging.sh  cli_release_workflow.sh  daemon_integration.rs  example_sdk_default.sh  integration.rs  tart_vm_doctor.sh  tart_vm_entrypoints.sh  tart_vm_provision.sh  tart_vm_scripts.sh  tart_vm_status.sh  tart_vm_workflow.sh
tools/remo-tart/: .gitignore  README.md  pyproject.toml
tools/remo-tart/src/remo_tart/: __init__.py  __main__.py  cli.py  config.py  connect.py  console.py  dispatch.py  doctor.py  errors.py  launchd.py  mount.py  paths.py  pool.py  provision.py  ssh.py  state.py  status.py  vm.py  worktree.py
tools/remo-tart/tests/: test_cli.py  test_config.py  test_connect.py  test_dispatch.py  test_doctor.py  test_errors.py  test_launchd.py  test_mount.py  test_paths.py  test_pool.py  test_provision.py  test_ssh.py  test_state.py  test_status.py  test_vm.py  test_worktree.py
website/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
website/src/: App.tsx
(+82 files in other folders)
