[workspace]
resolver = "2"
members = [
    ".",
    "crates/remo-protocol",
    "crates/remo-transport",
    "crates/remo-usbmuxd",
    "crates/remo-sdk",
    "crates/remo-objc",
    "crates/remo-desktop",
    "crates/remo-cli",
    "crates/remo-bonjour",
    "crates/remo-daemon",
]

[workspace.lints.clippy]
# Correctness & safety
await_holding_lock = "warn"
large_futures = "warn"
undocumented_unsafe_blocks = "warn"

# Style & idioms
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
implicit_clone = "warn"
manual_let_else = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
unnecessary_wraps = "warn"
unused_self = "warn"

# Performance
trivially_copy_pass_by_ref = "warn"

[workspace.lints.rust]
unsafe_code = "warn"
unused_qualifications = "warn"

[workspace.package]
version = "0.4.2"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/yjmeqt/Remo"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Bytes / framing
bytes = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# plist (for usbmuxd)
plist = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Async utilities
futures = "0.3"
dashmap = "6"

# Encoding
base64 = "0.22"

# Web server
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["util"] }
http = "1"

# Open URLs in browser
open = "5"

[package]
name = "remo-workspace"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dev-dependencies]
remo-protocol = { path = "crates/remo-protocol" }
remo-transport = { path = "crates/remo-transport" }
remo-sdk = { path = "crates/remo-sdk" }
remo-desktop = { path = "crates/remo-desktop" }
remo-daemon = { path = "crates/remo-daemon" }
tokio = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
