[package]
name = "remo-agent"
version.workspace = true
edition.workspace = true

[dependencies]
remo-core = { workspace = true }
remo-objc = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }

[[example]]
name = "standalone_agent"
path = "examples/standalone_agent.rs"
