[package]
name = "remo-cli"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "remo"
path = "src/main.rs"

[dependencies]
remo-protocol = { path = "../remo-protocol" }
remo-desktop = { path = "../remo-desktop" }
remo-usbmuxd = { path = "../remo-usbmuxd" }
tokio.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
