[package]
name = "remo-cli"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[[bin]]
name = "remo"
path = "src/main.rs"

[dependencies]
remo-protocol = { path = "../remo-protocol" }
remo-desktop = { path = "../remo-desktop" }
remo-usbmuxd = { path = "../remo-usbmuxd" }
remo-daemon = { path = "../remo-daemon" }
tokio.workspace = true
clap.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
base64.workspace = true
open.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
[target.'cfg(unix)'.dependencies]
libc = "0.2"
