[package]
name = "remo-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Remo daemon — persistent device connections, event bus, and HTTP API"

[lints]
workspace = true

[dependencies]
remo-protocol = { path = "../remo-protocol" }
remo-transport = { path = "../remo-transport" }
remo-desktop = { path = "../remo-desktop" }
remo-bonjour = { path = "../remo-bonjour" }
remo-usbmuxd = { path = "../remo-usbmuxd" }

tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
