[package]
name = "remo-desktop"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
remo-protocol = { path = "../remo-protocol" }
remo-transport = { path = "../remo-transport" }
remo-usbmuxd = { path = "../remo-usbmuxd" }
tokio.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true
dashmap.workspace = true
futures.workspace = true
