[package]
name = "remo-host"
version.workspace = true
edition.workspace = true

[dependencies]
remo-core = { workspace = true }
remo-transport = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
remo-agent = { workspace = true }
remo-objc = { workspace = true }
