[project]
name = "remo-tart"
version = "0.1.0"
description = "CLI for managing the Remo Tart development VM."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "rich>=13",
    "pydantic>=2.6",
]

[project.scripts]
remo-tart = "remo_tart.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/remo_tart"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "N", "C4", "PT"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
